Better onlyUseLDAP functions

--- a/locale/en.yml
+++ b/locale/en.yml
@@ -1,7 +1,8 @@
 tituspijean-flarum-ext-auth-ldap:
   forum:
-    log_in: => core.ref.log_in
-    log_in_with: Log in with LDAP
+    log_in: Log in with LDAP
+    log_in_link: Log in with LDAP
+    log_in_title: Log in with LDAP
     log_out: => core.ref.log_out
   admin:
     settings:
