--- a/locale/en.yml
+++ b/locale/en.yml
@@ -9,7 +9,7 @@ tituspijean-auth-ldap:
         method_name: LDAP server name (will appear after "Login with")
         hosts: LDAP domains (comma separated)
         base_dn: Base DN
-        filter: Filter applied before the base DN
+        filter: Filter to apply (optional)
         port: port
         account_prefix: Account prefix
         account_suffix: Account suffix
