--- a/locale/en.yml
+++ b/locale/en.yml
@@ -17,7 +17,7 @@ tituspijean-auth-ldap:
         admin_password: LDAP admin password (leave empty for anonymous binding)
         search_user_fields: LDAP user search fields (comma separed)
         user_mail: LDAP user mail field
-        user_username: LDAP user dispayName field
+        user_username: LDAP username field
       follow_referrals: Follow referrals
       use_ssl: Use SSL
       use_tls: Use TLS
