--- a/locale/en.yml
+++ b/locale/en.yml
@@ -18,7 +18,7 @@ tituspijean-auth-ldap:
         search_user_fields: LDAP user search fields (comma separed)
         user_mail: LDAP user mail field
         user_username: LDAP username field
-      follow_referrals: Follow referrals
+      follow_referrals: Follow referrals to bind to LDAP server
       use_ssl: Use SSL
       use_tls: Use TLS
-      onlyUse: Disable Flarum login and only use LDAP authentication
+      onlyUse: Hide Flarum standard login method
