[enh] locales: make server name a variable Enables translation into languages that do not put the server name at the end of the sentence.

--- a/locale/fr.yml
+++ b/locale/fr.yml
@@ -1,6 +1,6 @@
 tituspijean-auth-ldap:
   forum:
-    log_in_with: Connexion par
+    log_in_with: "Connexion via {server}"
     log_out: => core.ref.log_out
   admin:
     settings:
