--- a/locale/en.yml
+++ b/locale/en.yml
@@ -1,6 +1,6 @@
 tituspijean-auth-ldap:
   forum:
-    log_in_with: Log in with
+    log_in_with: "Log in with {server}"
     log_out: => core.ref.log_out
   admin:
     settings:
