--- a/locale/en.yml
+++ b/locale/en.yml
@@ -1,7 +1,21 @@
 tituspijean-auth-ldap:
   forum:
-    log_in_with: "Log in with {server}"
+    account_found: Found account in {server}
+    log_in_with: Log in with {server}
     log_out: => core.ref.log_out
+    errors:
+      # Detection for core.views.error.csrf_token_mismatch, otherwise no error prompt will be shown if this doesn't match.
+      core_csrf_token_mismatch: You have been inactive for too long.
+      not_authenticated: Unable to bind {server} due to invalid credential, amend extension settings.
+      csrf_token_mismatch: You have been inactive for too long, please refresh the page and try again
+      account:
+        invalid_inputs: Input fields cannot be empty
+        not_found: Cannot find your account in {server}.
+        incorrect_details: Incorrect password entered.
+        password_expired: Your password has expired.
+        disabled: Your account is disabled, contact your {server} administration.
+        expired: Your account has expired, contact your {server} administration.
+        locked: Your account is locked, contact your {server} administration.
   admin:
     settings:
       title: LDAP settings
@@ -15,9 +29,11 @@ tituspijean-auth-ldap:
       admin_dn: LDAP admin distinguished name (leave empty for anonymous binding)
       admin_password: LDAP admin password (leave empty for anonymous binding)
       search_user_fields: LDAP user search fields (comma separed)
+      search_nickname_fields: LDAP nickname search fields, enable Nicknames extension (comma separed)
       user_mail: LDAP user mail field
       user_username: LDAP username field
       follow_referrals: Follow referrals to bind to LDAP server
       use_ssl: Use SSL
       use_tls: Use TLS
       onlyUse: Hide Flarum standard login method
+      display_detailed_error: Display detailed LDAP errors for failed login attempts 
