--- a/locale/de.yml
+++ b/locale/de.yml
@@ -4,8 +4,11 @@ tituspijean-auth-ldap:
     log_in_with: "Auf {server} anmelden."
     log_out: => core.ref.log_out
     errors:
-      # Detection for core.views.error.csrf_token_mismatch, otherwise no error prompt will be shown if this doesn't match.
-      core_csrf_token_mismatch: 'Sie waren zu lange inaktiv.'
+      core_csrf_token_mismatch: => core.views.error.csrf_token_mismatch
+      search_filter_is_invalid: Unable to search filter for {server} due to invalid `LDAP Feld für Benutzererkenning`, amend extension settings.
+      username_is_invalid: Cannot save {server} user if `LDAP Nutzernamenfeld` is empty, amend extension settings.
+      username_field_does_not_exist: Cannot find {server} username from `LDAP Nutzernamenfeld` with `{data}`, amend extension settings.
+      mail_field_does_not_exist: Cannot find {server} mail from `LDAP Mailfeld` with `{data}`, amend extension settings.
       not_authenticated: Unable to bind {server} due to invalid credential, amend extension settings.
       csrf_token_mismatch: You have been inactive for too long, please refresh the page and try again
       account:
@@ -29,11 +32,11 @@ tituspijean-auth-ldap:
       admin_dn: LDAP Admin bind Name (Für anonymen Bind leerlassen)
       admin_password: LDAP Admin Passwort (Für anonymen Bind leerlassen)
       search_user_fields: LDAP Feld für Benutzererkenning (Komma Trennung)
-      search_nickname_fields: LDAP nickname search fields, enable Nicknames extension (comma separed)
-      user_mail: LDAP Mailfeld
+      search_nickname_fields: LDAP nickname search fields, enable Nicknames extension (comma separated)
+      user_mail: LDAP Mailfeld (leave empty for allowing users to set their own email)
       user_username: LDAP Nutzernamenfeld
       follow_referrals: Follow referrals to bind to LDAP server
       use_ssl: Benutze SSL
       use_tls: Benutze TLS
       onlyUse: Verstecke Standard Loginmethode.
-      display_detailed_error: Display detailed LDAP errors for failed login attempts
+      display_detailed_error: Display detailed LDAP errors for failed login attempts 
