--- a/locale/fr.yml
+++ b/locale/fr.yml
@@ -4,8 +4,11 @@ tituspijean-auth-ldap:
     log_in_with: "Connexion via {server}"
     log_out: => core.ref.log_out
     errors:
-      # Detection for core.views.error.csrf_token_mismatch, otherwise no error prompt will be shown if this doesn't match.
-      core_csrf_token_mismatch: Vous êtes resté inactif trop longtemps.
+      core_csrf_token_mismatch: => core.views.error.csrf_token_mismatch
+      search_filter_is_invalid: Unable to search filter for {server} due to invalid `Champs où rechercher l’utilisateur`, amend extension settings.
+      username_is_invalid: Cannot save {server} user if `Champ pour le nom d’utilisateur` is empty, amend extension settings.
+      username_field_does_not_exist: Cannot find {server} username from `Champ pour le nom d’utilisateur` with `{data}`, amend extension settings.
+      mail_field_does_not_exist: Cannot find {server} mail from `Champ pour l’email d’utilisateur` with `{data}`, amend extension settings.
       not_authenticated: Unable to bind {server} due to invalid credential, amend extension settings.
       csrf_token_mismatch: You have been inactive for too long, please refresh the page and try again
       account:
@@ -29,11 +32,11 @@ tituspijean-auth-ldap:
       admin_dn: Nom unique (DN) de l’administrateur LDAP (laisser vide pour se connecter anonymement)
       admin_password: Mot de passe de l’administrateur (laisser vide pour se connecter anonymement)
       search_user_fields: Champs où rechercher l’utilisateur (séparés par des virgules)
-      search_nickname_fields: LDAP nickname search fields, enable Nicknames extension (comma separed)
-      user_mail: Champ pour l’email d’utilisateur
+      search_nickname_fields: LDAP nickname search fields, enable Nicknames extension (comma separated)
+      user_mail: Champ pour l’email d’utilisateur (leave empty for allowing users to set their own email)
       user_username: Champ pour le nom d’utilisateur
       follow_referrals: Suivre les renvois pour se connecter au serveur LDAP
       use_ssl: Utiliser SSL
       use_tls: Utiliser TLS
       onlyUse: Cacher le système de connexion standard de Flarum
-      display_detailed_error: Display detailed LDAP errors for failed login attempts
+      display_detailed_error: Display detailed LDAP errors for failed login attempts 
