--- a/locale/en.yml
+++ b/locale/en.yml
@@ -59,11 +59,11 @@ tituspijean-auth-ldap:
           admin_password: Password
           admin_password_help: Leave empty for anonymous binding
           search_user_fields: Search fields
-          search_user_fields_help: Must use commas for multiple search fields, for example "mail" will only allow email and "uid,mail" will allow either email or username.
+          search_user_fields_help: Select multiple search fields using the dropdown options, for example selecting "mail" will only allow email, while "uid,mail" will allow either email or username.
           user_username: Assign Username field
           user_mail: Assign Email field
           user_mail_help: Leave empty for allowing User's to set their own email during registation
           user_nickname_fields: Assign Nickname with fields
-          user_nickname_fields_help: Nickname extension must be enabled, compile Nickname with multiple LDAP fields use comma to separate. For example "givenname,sn" will assign "[First Name] [Last Name]" as Nickname
+          user_nickname_fields_help: Nickname extension must be enabled, compile the Nickname with multiple LDAP fields using the dropdown options. For example selecting "givenname,sn" will assign "[First Name] [Last Name]" as their Nickname
       onlyUse: Hide Flarum standard login method
       display_detailed_error: Display detailed LDAP errors for failed login attempts 
